<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:title="@string/inicio" />
        <item
            android:id="@+id/nav_perfil"
            android:title="Perfil" />

        <item
            android:id="@+id/nav_inmueble"
            android:title="@string/inmueble" />

        <item
            android:id="@+id/nav_inquilino"
            android:title="@string/inquilino" />

        <item
            android:id="@+id/nav_contrato"
            android:title="@string/Contrato" />

        <item
            android:id="@+id/nav_logout"
            android:title="@string/Logout" />

    </group>
</menu>